--- a/MoviesDB.xcodeproj/xcshareddata/xcschemes/MoviesDB.xcscheme
+++ b/MoviesDB.xcodeproj/xcshareddata/xcschemes/MoviesDB.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:MoviesDB.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6A4E7E212A8BC007003CF7C8"
+               BuildableName = "MoviesDBTests.xctest"
+               BlueprintName = "MoviesDBTests"
+               ReferencedContainer = "container:MoviesDB.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
